[package]
name = "gluon-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }
toml = "0.8"
libc = "0.2"
cyclotron = {path = "../../cyclotron"}

[lib]
name = "gluon"
